Checking in simple models so far (kNN and logistic regression)

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -281,27 +281,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 171,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Final \n",
+    "# Final quick check of datatypes\n",
     "assert X_train.dtype == np.uint8\n",
     "assert y_train.dtype == np.uint8\n",
     "assert X_test.dtype == np.uint8\n",
     "assert y_test.dtype == np.uint8"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
