--- a/notebooks/simple_models.ipynb
+++ b/notebooks/simple_models.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -186,6 +186,9 @@
     "SEED = 1234 # Fix the seed for repeatability\n",
     "MAX_ITER = 100 # L-BFGS may show warnings that it doesn't converge\n",
     "N_FOLDS = 5 # How may folds to do k-folds cross validation for\n",
+    "RUN_CV = False # Run Cross-validation on training set?\n",
+    "\n",
+    "scores = dict() # Store the scores in here\n",
     "\n",
     "# Create a stratified, shuffled subset of the training data if needed\n",
     "N = n_train # How may training examples to use\n",
@@ -214,37 +217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.1s finished\n",
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.1s finished\n",
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.0s finished\n",
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.4s finished\n",
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.2s finished\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression CV on 60000 examples. Mean error 0.080684, Std dev 0.002010\n",
       "Logistic regression error 0.074800\n"
      ]
     },
@@ -252,9 +233,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "/Users/tim/anaconda/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
       "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   27.9s finished\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    9.5s finished\n"
      ]
     }
    ],
@@ -265,18 +246,20 @@
     "                                  max_iter=MAX_ITER, \n",
     "                                  verbose=VERBOSE, random_state=SEED) \n",
     "\n",
-    "errors = evaluate_model(model=logreg_model, scoring='accuracy', \n",
-    "                        X=X_train, y=y_train, n_folds=N_FOLDS, \n",
-    "                        n_jobs=N_JOBS, random_state=SEED)\n",
+    "if RUN_CV:\n",
+    "    errors = evaluate_model(model=logreg_model, scoring='accuracy', \n",
+    "                            X=X_train, y=y_train, n_folds=N_FOLDS, \n",
+    "                            n_jobs=N_JOBS, random_state=SEED)\n",
     "\n",
-    "cv_error_mean, cv_error_std = mean_std(errors)\n",
+    "    cv_error_mean, cv_error_std = mean_std(errors)\n",
+    "    print('Logistic regression CV on {} examples. Mean error {:.6f}, Std dev {:.6f}'.format(N, cv_error_mean, cv_error_std))\n",
     "\n",
     "test_error = train_and_evaluate(model=logreg_model, \n",
     "                                X_train=X_train, y_train=y_train, \n",
     "                                X_test=X_test, y_test=y_test, \n",
     "                                random_state=SEED)\n",
     "\n",
-    "print('Logistic regression CV on {} examples. Mean error {:.6f}, Std dev {:.6f}'.format(N, cv_error_mean, cv_error_std))\n",
+    "scores['log_reg'] = test_error\n",
     "print('Logistic regression error {:.6f}'.format(test_error))"
    ]
   },
@@ -291,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +283,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN CV on 60000 examples. Mean error 0.028500, Std dev 0.002017\n",
       "kNN test error 0.029500\n"
      ]
     }
@@ -309,58 +291,20 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "knn_model = KNeighborsClassifier(n_neighbors=3, metric='euclidean', p=1, n_jobs=N_JOBS)\n",
-    "errors = evaluate_model(knn_model, 'accuracy', X_train, y_train,  \n",
-    "                        n_folds=N_FOLDS, n_jobs=N_JOBS, random_state=SEED)\n",
-    "cv_error_mean, cv_error_std = mean_std(errors)\n",
+    "\n",
+    "if RUN_CV:\n",
+    "    errors = evaluate_model(knn_model, 'accuracy', X_train, y_train,  \n",
+    "                            n_folds=N_FOLDS, n_jobs=N_JOBS, random_state=SEED)\n",
+    "    cv_error_mean, cv_error_std = mean_std(errors)\n",
+    "    print('kNN CV on {} examples. Mean error {:.6f}, Std dev {:.6f}'.format(N, cv_error_mean, cv_error_std))\n",
     "\n",
     "test_error = train_and_evaluate(model=knn_model, \n",
     "                                X_train=X_train, y_train=y_train, \n",
     "                                X_test=X_test, y_test=y_test, \n",
     "                                random_state=SEED)\n",
     "\n",
-    "print('kNN CV on {} examples. Mean error {:.6f}, Std dev {:.6f}'.format(N, cv_error_mean, cv_error_std))\n",
+    "scores['knn'] = test_error\n",
     "print('kNN test error {:.6f}'.format(test_error))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking performance of kNN with k = 1 ..\n",
-      "Checking performance of kNN with k = 2 ..\n",
-      "Checking performance of kNN with k = 3 ..\n",
-      "Checking performance of kNN with k = 4 ..\n",
-      "Checking performance of kNN with k = 5 ..\n",
-      "kNN with k 1, test error 0.029500\n",
-      "kNN with k 2, test error 0.029500\n",
-      "kNN with k 3, test error 0.029500\n",
-      "kNN with k 4, test error 0.029500\n",
-      "kNN with k 5, test error 0.029500\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Let's try some different values for k .. \n",
-    "scores = dict()\n",
-    "\n",
-    "# New idea - just train and predict on test set instead of doing CV\n",
-    "for k in (1, 2, 3, 4, 5):\n",
-    "    print('Checking performance of kNN with k = {} ..'.format(k))\n",
-    "    knn_model = KNeighborsClassifier(n_neighbors=3, n_jobs=N_JOBS)\n",
-    "    test_error = train_and_evaluate(model=knn_model, \n",
-    "                                    X_train=X_train, y_train=y_train, \n",
-    "                                    X_test=X_test, y_test=y_test, \n",
-    "                                    random_state=SEED)\n",
-    "    scores[k] = test_error\n",
-    "    \n",
-    "result = {print('kNN with k {}, test error {:.6f}'.format(key, val)) for key, val in scores.items()}"
    ]
   },
   {
@@ -390,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -406,45 +350,17 @@
       "Subtracting mean of training data from test data\n",
       "Projecting test data onto top 40 PCA basis vectors\n",
       "Test data shape (10000, 821)\n",
-      "Training logistic regression model on PCA interaction terms\n"
+      "Training logistic regression model on PCA interaction terms\n",
+      "Logistic regression error 0.031400\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "/Users/tim/anaconda/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
       "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   26.7s finished\n",
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   37.0s finished\n",
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   39.2s finished\n",
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   38.7s finished\n",
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   42.9s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic regression CV on 60000 examples. Mean error 0.035067, Std dev 0.002260\n",
-      "Logistic regression error 0.031900\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  1.0min finished\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   12.7s finished\n"
      ]
     }
    ],
@@ -496,22 +412,26 @@
     "\n",
     "### MODEL ###\n",
     "print('Training logistic regression model on PCA interaction terms')\n",
+    "\n",
     "logreg_model = LogisticRegression(solver='lbfgs', multi_class='multinomial', \n",
     "                                  max_iter=MAX_ITER, \n",
     "                                  verbose=VERBOSE, random_state=SEED) \n",
     "\n",
-    "errors = evaluate_model(model=logreg_model, scoring='accuracy', \n",
-    "                        X=X_train_pca_poly, y=y_train, n_folds=N_FOLDS, \n",
-    "                        n_jobs=N_JOBS, random_state=SEED)\n",
+    "if RUN_CV:\n",
+    "    errors = evaluate_model(model=logreg_model, scoring='accuracy', \n",
+    "                            X=X_train_pca_poly, y=y_train, n_folds=N_FOLDS, \n",
+    "                            n_jobs=N_JOBS, random_state=SEED)\n",
     "\n",
-    "cv_error_mean, cv_error_std = mean_std(errors)\n",
+    "    cv_error_mean, cv_error_std = mean_std(errors)\n",
+    "    print('Logistic regression CV on {} examples. Mean error {:.6f}, Std dev {:.6f}'.format(N, cv_error_mean, cv_error_std))\n",
+    "  \n",
     "\n",
     "test_error = train_and_evaluate(model=logreg_model, \n",
     "                                X_train=X_train_pca_poly, y_train=y_train, \n",
     "                                X_test=X_test_pca_poly, y_test=y_test, \n",
     "                                random_state=SEED)\n",
     "\n",
-    "print('Logistic regression CV on {} examples. Mean error {:.6f}, Std dev {:.6f}'.format(N, cv_error_mean, cv_error_std))\n",
+    "scores['pca_int_logreg'] = test_error\n",
     "print('Logistic regression error {:.6f}'.format(test_error))"
    ]
   },
@@ -535,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -561,7 +481,7 @@
      "text": [
       "Training SVM\n",
       "Evaluating SVM\n",
-      "[LibSVM]"
+      "[LibSVM]SVM Poly-4  regression error 0.031400\n"
      ]
     }
    ],
@@ -582,14 +502,17 @@
     "clf = SVC(C=1.0, kernel='poly', degree=4, verbose=True)\n",
     "\n",
     "print('Evaluating SVM')\n",
-    "errors = evaluate_model(clf, 'accuracy', X_train, y_train,  \n",
-    "                        n_folds=N_FOLDS, n_jobs=N_JOBS, random_state=SEED)\n",
-    "cv_error_mean, cv_error_std = mean_std(errors)\n",
-    "print('SVM Poly-4 {} examples. Mean error {:.6f}, Std dev {:.6f}'.format(N, cv_error_mean, cv_error_std))\n",
+    "if RUN_CV:\n",
+    "    errors = evaluate_model(clf, 'accuracy', X_train, y_train,  \n",
+    "                            n_folds=N_FOLDS, n_jobs=N_JOBS, random_state=SEED)\n",
+    "    cv_error_mean, cv_error_std = mean_std(errors)\n",
+    "    print('SVM Poly-4 {} examples. Mean error {:.6f}, Std dev {:.6f}'.format(N, cv_error_mean, cv_error_std))\n",
     "\n",
     "clf.fit(X_train_std, y_train)\n",
     "accuracy = clf.score(X_test_std, y_test)\n",
     "error = 1.0 - accuracy\n",
+    "\n",
+    "scores['svm_poly4'] = error\n",
     "print('SVM Poly-4  regression error {:.6f}'.format(test_error))"
    ]
   },
