Ran simple models with cross validation results reported.

--- a/notebooks/simple_models.ipynb
+++ b/notebooks/simple_models.ipynb
@@ -107,7 +107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/tim/anaconda/envs/tensorflow/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +186,7 @@
     "SEED = 1234 # Fix the seed for repeatability\n",
     "MAX_ITER = 100 # L-BFGS may show warnings that it doesn't converge\n",
     "N_FOLDS = 5 # How may folds to do k-folds cross validation for\n",
-    "RUN_CV = False # Run Cross-validation on training set?\n",
+    "RUN_CV = True # Run Cross-validation on training set?\n",
     "\n",
     "scores = dict() # Store the scores in here\n",
     "\n",
@@ -217,15 +217,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   22.6s finished\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.2s finished\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.2s finished\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.4s finished\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   23.7s finished\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Logistic regression CV on 60000 examples. Mean error 0.080684, Std dev 0.002010\n",
       "Logistic regression error 0.074800\n"
      ]
     },
@@ -233,9 +255,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/tim/anaconda/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
       "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    9.5s finished\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   27.7s finished\n"
      ]
     }
    ],
@@ -274,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -283,6 +305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "kNN CV on 60000 examples. Mean error 0.028500, Std dev 0.002017\n",
       "kNN test error 0.029500\n"
      ]
     }
@@ -334,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -350,17 +373,45 @@
       "Subtracting mean of training data from test data\n",
       "Projecting test data onto top 40 PCA basis vectors\n",
       "Test data shape (10000, 821)\n",
-      "Training logistic regression model on PCA interaction terms\n",
-      "Logistic regression error 0.031400\n"
+      "Training logistic regression model on PCA interaction terms\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/tim/anaconda/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
       "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   12.7s finished\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   26.9s finished\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   37.2s finished\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   39.7s finished\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   42.0s finished\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   44.4s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic regression CV on 60000 examples. Mean error 0.035184, Std dev 0.002182\n",
+      "Logistic regression error 0.031700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/linear_model/logistic.py:717: UserWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  warnings.warn(\"lbfgs failed to converge. Increase the number \"\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   59.9s finished\n"
      ]
     }
    ],
@@ -455,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +522,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/tim/anaconda/envs/tensorflow/lib/python3.5/site-packages/sklearn/utils/validation.py:429: DataConversionWarning: Data with input dtype uint8 was converted to float64 by StandardScaler.\n",
+      "/home/tim/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/utils/validation.py:429: DataConversionWarning: Data with input dtype uint8 was converted to float64 by StandardScaler.\n",
       "  warnings.warn(msg, _DataConversionWarning)\n"
      ]
     },
@@ -481,7 +532,8 @@
      "text": [
       "Training SVM\n",
       "Evaluating SVM\n",
-      "[LibSVM]SVM Poly-4  regression error 0.031400\n"
+      "SVM Poly-4 60000 examples. Mean error 0.028333, Std dev 0.000950\n",
+      "[LibSVM]SVM Poly-4  regression error 0.031700\n"
      ]
     }
    ],
@@ -513,17 +565,33 @@
     "error = 1.0 - accuracy\n",
     "\n",
     "scores['svm_poly4'] = error\n",
-    "print('SVM Poly-4  regression error {:.6f}'.format(test_error))"
+    "print('SVM Poly-4  regression error {:.6f}'.format(error))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'knn': 0.029499999999999971,\n",
+       " 'log_reg': 0.074799999999999978,\n",
+       " 'pca_int_logreg': 0.03169999999999995,\n",
+       " 'svm_poly4': 0.13239999999999996}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
   },
   {
    "cell_type": "code",
